# fastscrapy

./: .gitignore  LICENSE  README.md  pyproject.toml
fastscrapy/: __init__.py  fastscraper.py
